--- a/public/client.html
+++ b/public/client.html
@@ -1,13 +1,37 @@
-<script src="/socket.io/socket.io.js"></script>
-<script>
-io = io.connect()
+<!DOCTYPE html>
+<html>
+  <head>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+    <script src="https://jsc3d.googlecode.com/files/jsc3d.0.7.2.min.js"></script>
+    <script>
+    var io = io.connect()
 
-// Emit ready event.
-io.emit('ready') 
+    // Emit ready event.
+    io.emit('ready') 
 
-// Listen for the talk event.
-io.on('talk', function(data) {
-    alert(data.message)
-})
+    // Listen for the talk event.
+    io.on('talk', function(data) {
+        alert(data.message)
+    })
 
-</script>
+    $(document).ready(function() {
+      var viewer = new JSC3D.Viewer(document.getElementById('cv'));
+      viewer.setParameter('SceneUrl',         'model/buddha.obj');
+      viewer.setParameter('ModelColor',       '#CAA618');
+      viewer.setParameter('BackgroundColor1', '#E5D7BA');
+      viewer.setParameter('BackgroundColor2', '#383840');
+      viewer.setParameter('RenderMode',       'flat');
+      viewer.init();
+      viewer.update();
+    });
+
+    </script>
+  </head>
+
+  <body>
+    <canvas id="cv" width="640" height="480"></canvas>
+  </body>
+
+</html>
+
